# SR-2-FlatShading

./: CMakeLists.txt  README.md  configure.sh  debug.sh  run.sh
src/: ObjLoader.cpp  ObjLoader.h  camera.h  fragment.h  framebuffer.cpp  framebuffer.h  line.cpp  line.h  main.cpp  print.h  shaders.h  triangle.cpp  triangle.h  uniforms.h  vertex.h
